# chroma-mcp-http-server

./: Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: build-and-push.yml
app/: chromaclient.py  config.py  main.py  mcp_models.py  routes.py
documentation/: DATAFLOW_ARCHITECTURE.puml  DATAFLOW_DETAILLED.puml
tests/: __init__.py  conftest.py  test_chromaclient.py  test_config.py  test_integration.py  test_main.py  test_mcp_models.py  test_query.py  test_routes.py
