[project]
name = "chroma-mcp-http-server"
version = "0.1.0"
description = "HTTP/SSE MCP server that adapters ChromaDB via the Python HttpClient."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "chromadb>=0.5.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/chroma-mcp-http-server"
Repository = "https://github.com/your-org/chroma-mcp-http-server"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"